--- a/hw6/Assignment6_12131094.ipynb
+++ b/hw6/Assignment6_12131094.ipynb
@@ -90,7 +90,7 @@
     "\n",
     "(b) Note that for any $P ∈ S_{++}^n$, the function $log(det(P))$ is concave in the matrix variable $P$. Formulate a convex optimization problem to find the matrix $P ∈ S_{++}^n$ such that $E_1(P, 0)$ is the largest ellipsoid contained in the polyhedron ${x ∈ R^n : a^T_i x ≤ 1,i = 1,...,m}$\n",
     "\n",
-    "(c) Use Drake to solve the above problem with $a^T_1 = [−1, 1]$, $a^T_2 = [2, −1]$, $a^T_3 = [1, 3]$, $a^T_4 = [−2, −5]$. Visualize the polyhedron region and your ellipsoid solution (you can use Matlab for the visualization if you prefer matlab)  \n"
+    "(c) Use Drake to solve the above problem with $a^T_1 = [−1, 1]$, $a^T_2 = [2, −1]$, $a^T_3 = [1, 3]$, $a^T_4 = [−2, −5]$. Visualize the polyhedron region and your ellipsoid solution (you can use Matlab for the visualization if you prefer matlab)   \n"
    ]
   },
   {
@@ -98,18 +98,133 @@
    "metadata": {},
    "source": [
     "##### Solution:\n",
-    "(a) \n",
+    "(a) The ellipsoid $E_2(A,0) =\\{ Au:||u||^2\\leq 1\\}$, so the ellipsoid $x = Au, ||u||^2 \\leq 1$。\n",
     "\n",
-    "(b)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#pro2-3"
+    "For the half-space ${x ∈ Rn : a^T x ≤ 1}$, in order to get the ellipsoid contained in the half space, for all $x\\in R^n$ in the ellipsoid, the expression $x = Au$ must satisfy the inequality $a^Tx \\leq 1$. \n",
+    "\n",
+    "Plug-in the $x =Au$ to the ineuality we get \n",
+    "$$ \\begin{aligned}  a^TAu & \\leq 1 \\\\\n",
+    " ||a^T Au||^2 &\\leq 1 \\\\\n",
+    " (a^TAu)(a^TAu)^T &\\leq 1\\\\\n",
+    " a^TAuu^TAa &\\leq 1\n",
+    "\\end{aligned}$$\n",
+    "Since we know the $||u||^2 \\leq 1 $, $uu^T-I\\leq0$, so \n",
+    "$$ a^TAAa \\leq 1 $$\n",
+    "\n",
+    "(b) The volume of a ellipsoid $E_1(P,x_c) = {x ∈ R^n : (x−x_c)P^{−1}(x−x_c) ≤ 1}$ is $V = \\nu_n(\\sqrt{det(P)})$.\n",
+    "To find the largest epllipsoid, that is to find a $P$ which maximize $log(\\sqrt{det(P)})$.\n",
+    "\n",
+    "We use the second representation to represent the ellipsoid $E_2(A, x_c) = {Au+x_c : ∥u∥^2 ≤ 1}$, for $A = P^{\\frac{1}{2}}$, it can be $E = {P^{\\frac{1}{2}}u+x_c : ∥u∥^2 ≤ 1}$.\n",
+    "((\n",
+    "The volume of ellipsoid is proportional to $det(P) = det(A^2)$, so the problem can be formulated by \n",
+    "$$\\left\\{\\begin{array}{ll}\\max _{P,\\tau,\\alpha} & log(det(A)) \\\\ \\text { subject.: } & sub_{||u||^2\\leq 1} a_i^T(Au+x_c)\\leq 1,i= 1,2,...,m,\\end{array} \\right.$$ \n",
+    "\n",
+    "The constraint can be equvilent to \n",
+    "$$\\left\\{\\begin{array}{ll}\\max _{P,\\tau,\\alpha} & log(det(A)) \\\\ \\text { subject.: } & || Aa_i||_2 + a_i^Tx_c \\leq 1, i= 1,2,...,m, \\end{array} \\right.$$ \n",
+    "\n",
+    "Since $log(det(A))$ is concave, and the constraint condition is affine function, the problem is a convex optimization problem.\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "(c) Using matlab CVX toolbox to solve the given problem, the code is shown below.\n",
+    "\n",
+    "```\n",
+    "n = 2;\n",
+    "px = [-0.5 4/7 1/3 -6/7];\n",
+    "py = [0.5 1/7 -1/3 1/7];\n",
+    "m = 4;\n",
+    "px = [px px(1)];\n",
+    "py = [py py(1)];\n",
+    "A = zeros(m,n); b = zeros(m,1);\n",
+    "A = [-1,1;2,-1;1,3;-2,-5];\n",
+    "b = [1;1;1;1;1];\n",
+    "\n",
+    "% formulate and solve the problem\n",
+    "cvx_begin\n",
+    "    variable B(n,n) symmetric\n",
+    "    variable d(n)\n",
+    "    maximize( det_rootn( B ) )\n",
+    "    subject to\n",
+    "       for i = 1:m\n",
+    "           norm( B*A(i,:)', 2 ) + A(i,:)*d <= b(i);\n",
+    "       end\n",
+    "cvx_end\n",
+    "% make the plots\n",
+    "noangles = 400;\n",
+    "angles   = linspace( 0, 2 * pi, noangles );\n",
+    "ellipse_inner  = B * [ cos(angles) ; sin(angles) ] + d * ones( 1, noangles );\n",
+    "\n",
+    "clf\n",
+    "plot(px,py)\n",
+    "hold on\n",
+    "plot( ellipse_inner(1,:), ellipse_inner(2,:), 'r--' );\n",
+    "axis square\n",
+    "hold off\n",
+    "```\n",
+    "\n",
+    "The output of the code is\n",
+    " ```\n",
+    "Calling SDPT3 4.0: 30 variables, 14 equality constraints\n",
+    "   For improved efficiency, SDPT3 is solving the dual problem.\n",
+    "------------------------------------------------------------\n",
+    "\n",
+    " num. of constraints = 14\n",
+    " dim. of sdp    var  =  6,   num. of sdp  blk  =  2\n",
+    " dim. of socp   var  = 12,   num. of socp blk  =  4\n",
+    " dim. of linear var  =  5\n",
+    "*******************************************************************\n",
+    "   SDPT3: Infeasible path-following algorithms\n",
+    "*******************************************************************\n",
+    " version  predcorr  gam  expon  scale_data\n",
+    "   HKM      1      0.000   1        0    \n",
+    "it pstep dstep pinfeas dinfeas  gap      prim-obj      dual-obj    cputime\n",
+    "-------------------------------------------------------------------\n",
+    " 0|0.000|0.000|1.8e+01|1.2e+01|1.2e+03| 1.385641e+01  0.000000e+00| 0:0:00| chol  1  1 \n",
+    " 1|1.000|0.741|7.8e-06|3.2e+00|3.3e+02| 3.397599e+01 -6.874381e+00| 0:0:00| chol  1  1 \n",
+    " 2|1.000|0.988|5.5e-06|4.9e-02|2.7e+01| 2.311574e+01 -9.692387e-02| 0:0:00| chol  1  1 \n",
+    " 3|0.898|1.000|1.2e-06|1.0e-03|3.3e+00| 3.235468e+00 -2.201325e-02| 0:0:00| chol  1  1 \n",
+    " 4|0.821|1.000|2.4e-07|1.0e-04|6.7e-01| 7.185773e-01  4.730671e-02| 0:0:00| chol  1  1 \n",
+    " 5|0.775|1.000|5.7e-08|1.0e-05|2.7e-01| 5.394086e-01  2.693960e-01| 0:0:00| chol  1  1 \n",
+    " 6|0.947|0.999|3.7e-09|1.0e-06|1.5e-02| 3.906265e-01  3.758807e-01| 0:0:00| chol  1  1 \n",
+    " 7|0.975|0.979|5.9e-10|1.2e-07|3.4e-04| 3.849103e-01  3.845749e-01| 0:0:00| chol  1  1 \n",
+    " 8|0.946|0.936|6.6e-10|1.7e-08|2.1e-05| 3.847799e-01  3.847587e-01| 0:0:00| chol  1  1 \n",
+    " 9|1.000|1.000|1.2e-09|1.3e-10|2.8e-06| 3.847739e-01  3.847712e-01| 0:0:00| chol  1  1 \n",
+    "10|1.000|1.000|7.8e-13|2.0e-10|8.7e-08| 3.847731e-01  3.847730e-01| 0:0:00| chol  1  1 \n",
+    "11|1.000|1.000|6.8e-12|1.0e-12|3.8e-09| 3.847731e-01  3.847731e-01| 0:0:00|\n",
+    "  stop: max(relative gap, infeasibilities) < 1.49e-08\n",
+    "-------------------------------------------------------------------\n",
+    " number of iterations   = 11\n",
+    " primal objective value =  3.84773066e-01\n",
+    " dual   objective value =  3.84773062e-01\n",
+    " gap := trace(XZ)       = 3.83e-09\n",
+    " relative gap           = 2.16e-09\n",
+    " actual relative gap    = 2.16e-09\n",
+    " rel. primal infeas (scaled problem)   = 6.76e-12\n",
+    " rel. dual     \"        \"       \"      = 1.00e-12\n",
+    " rel. primal infeas (unscaled problem) = 0.00e+00\n",
+    " rel. dual     \"        \"       \"      = 0.00e+00\n",
+    " norm(X), norm(y), norm(Z) = 2.2e+00, 1.0e+00, 3.4e+00\n",
+    " norm(A), norm(b), norm(C) = 1.4e+01, 2.0e+00, 3.0e+00\n",
+    " Total CPU time (secs)  = 0.14  \n",
+    " CPU time per iteration = 0.01  \n",
+    " termination code       =  0\n",
+    " DIMACS: 6.8e-12  0.0e+00  1.5e-12  0.0e+00  2.2e-09  2.2e-09\n",
+    "-------------------------------------------------------------------\n",
+    " \n",
+    "------------------------------------------------------------\n",
+    "Status: Solved\n",
+    "Optimal value (cvx_optval): +0.384773\n",
+    "```\n",
+    "\n",
+    "The plot of the ellipsoid is \n",
+    "<div align=center>\n",
+    "<img src=pro2-3.png width = 60% />\n",
+    "</div>"
    ]
   },
   {
@@ -169,36 +284,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[<Expression \"( - 0.10000000000000001 * P(0,0) + 2 * P(2,0) - 0.48999999999999994 * tau(0))\">\n",
-      "  <Expression \"( - P(0,0) - 0.10000000000000001 * P(1,0) + 3 * P(2,0) + P(2,1))\">\n",
-      "  <Expression \"( - P(1,0) + 2.8999999999999999 * P(2,0) + P(2,2))\">\n",
-      "  <Expression \"( - P(0,0) - 0.10000000000000001 * P(1,0) + 3 * P(2,0) + P(2,1))\">\n",
-      "  <Expression \"( - 2 * P(1,0) - 0.10000000000000001 * P(1,1) + 6 * P(2,1))\">\n",
-      "  <Expression \"( - P(2,0) - P(1,1) + 2.8999999999999999 * P(2,1) + 3 * P(2,2))\">]\n",
-      " [<Expression \"( - P(1,0) + 2.8999999999999999 * P(2,0) + P(2,2))\">\n",
-      "  <Expression \"( - P(2,0) - P(1,1) + 2.8999999999999999 * P(2,1) + 3 * P(2,2))\">\n",
-      "  <Expression \"( - 2 * P(2,1) + 5.9000000000000004 * P(2,2))\">\n",
-      "  <Expression \"(-1 * P(0,0))\"> <Expression \"(-1 * P(1,0))\">\n",
-      "  <Expression \"(-1 * P(2,0))\">]\n",
-      " [<Expression \"(-1 * P(1,0))\"> <Expression \"(-1 * P(1,1))\">\n",
-      "  <Expression \"(-1 * P(2,1))\"> <Expression \"(-1 * P(2,0))\">\n",
-      "  <Expression \"(-1 * P(2,1))\"> <Expression \"(-1 * P(2,2))\">]\n",
-      " [<Expression \"(-1 * P(0,0))\"> <Expression \"(-1 * P(1,0))\">\n",
-      "  <Expression \"(-1 * P(2,0))\"> <Expression \"(-1 * P(1,0))\">\n",
-      "  <Expression \"(-1 * P(1,1))\"> <Expression \"(-1 * P(2,1))\">]\n",
-      " [<Expression \"(-1 * P(2,0))\"> <Expression \"(-1 * P(2,1))\">\n",
-      "  <Expression \"(-1 * P(2,2))\"> <Expression \"(-1 * tau(0))\">\n",
-      "  <Expression \"0\"> <Expression \"0\">]\n",
-      " [<Expression \"0\"> <Expression \"(-1 * tau(0))\"> <Expression \"0\">\n",
-      "  <Expression \"0\"> <Expression \"0\"> <Expression \"(-1 * tau(0))\">]]\n",
-      "no result\n"
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'pydrake.all'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[1;32m/Users/tzxtoiny/Library/CloudStorage/OneDrive-redefineend-to-endsupply-chains/5-1-2/Advanced control for robotics/hw6/Assignment6_12131094.ipynb Cell 7'\u001b[0m in \u001b[0;36m<cell line: 3>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/tzxtoiny/Library/CloudStorage/OneDrive-redefineend-to-endsupply-chains/5-1-2/Advanced%20control%20for%20robotics/hw6/Assignment6_12131094.ipynb#ch0000007?line=0'>1</a>\u001b[0m \u001b[39m# pro3-2\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/tzxtoiny/Library/CloudStorage/OneDrive-redefineend-to-endsupply-chains/5-1-2/Advanced%20control%20for%20robotics/hw6/Assignment6_12131094.ipynb#ch0000007?line=1'>2</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mnumpy\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mnp\u001b[39;00m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/tzxtoiny/Library/CloudStorage/OneDrive-redefineend-to-endsupply-chains/5-1-2/Advanced%20control%20for%20robotics/hw6/Assignment6_12131094.ipynb#ch0000007?line=2'>3</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mpydrake\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mall\u001b[39;00m \u001b[39mimport\u001b[39;00m (MathematicalProgram, Solve)\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/tzxtoiny/Library/CloudStorage/OneDrive-redefineend-to-endsupply-chains/5-1-2/Advanced%20control%20for%20robotics/hw6/Assignment6_12131094.ipynb#ch0000007?line=3'>4</a>\u001b[0m \u001b[39m# This code is mainly adapted from Russ Tedrake. Underactuated Robotics: Algorithms for Walking,\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/tzxtoiny/Library/CloudStorage/OneDrive-redefineend-to-endsupply-chains/5-1-2/Advanced%20control%20for%20robotics/hw6/Assignment6_12131094.ipynb#ch0000007?line=4'>5</a>\u001b[0m \u001b[39m#  Running, Swimming, Flying, and Manipulation (Course Notes for MIT 6.832). Downloaded from http://underactuated.mit.edu/\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/tzxtoiny/Library/CloudStorage/OneDrive-redefineend-to-endsupply-chains/5-1-2/Advanced%20control%20for%20robotics/hw6/Assignment6_12131094.ipynb#ch0000007?line=7'>8</a>\u001b[0m A \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mmat([[\u001b[39m0\u001b[39m, \u001b[39m1\u001b[39m, \u001b[39m0\u001b[39m], [\u001b[39m0\u001b[39m, \u001b[39m0\u001b[39m, \u001b[39m1\u001b[39m], [\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m, \u001b[39m-\u001b[39m\u001b[39m3\u001b[39m, \u001b[39m-\u001b[39m\u001b[39m3\u001b[39m]])\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'pydrake.all'"
      ]
     }
    ],
@@ -225,7 +322,7 @@
     "\n",
     "I = np.identity(3)\n",
     "G =[-(A.T@P+P@A+beta*P+tau*alpha**2*c@b.T@b@c.T),-P],[-P,-tau*I]\n",
-    "G = np.array(G).reshape(6,6)\n",
+    "G = np.array(G).reshape(4,4)\n",
     "print(G)\n",
     "# find P,tau\n",
     "\n",
@@ -246,7 +343,7 @@
     "    print(\"P = \\n\", P)\n",
     "    print(\"tau = \\n \", tau)\n",
     "else:\n",
-    "    print(\"no result\")"
+    "    print(\"no result\") "
    ]
   },
   {
@@ -413,10 +510,10 @@
  ],
  "metadata": {
   "interpreter": {
-   "hash": "51109f29b74c83a02380174f2a388167f95e9702dac943105d59ff44b41a3852"
+   "hash": "16f387c6babd236717f0608cc6650d0b9e8370489872ad1ae749126a0292d9be"
   },
   "kernelspec": {
-   "display_name": "Python 3.8.10 ('env')",
+   "display_name": "Python 3.9.11 ('drake')",
    "language": "python",
    "name": "python3"
   },
@@ -430,7 +527,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.9.11"
   },
   "orig_nbformat": 4
  },
