--- a/hw6/Assignment6_12131094.ipynb
+++ b/hw6/Assignment6_12131094.ipynb
@@ -279,7 +279,11 @@
     "$$ \n",
     "Assume $G_0 = \\left[ \\begin{matrix}-(A^TP+PA+\\beta P) & -P\\\\ -P &  0 \\end{matrix} \\right]$,$G_1 = \\left[ \\begin{matrix} \\alpha^2 cb^Tbc^T  &0\\\\ 0 & -I  \\end{matrix} \\right]$, by s-procedure, we have $\\exist \\tau>0$, s.t. $G_0>\\tau G_1$, then the problem can be formulated by \n",
     "\n",
-    "$$\\left\\{\\begin{array}{ll}\\min _{P,\\tau,\\alpha} & -\\beta \\\\ \\text { subject.: } & P \\succ 0, \\\\& \\tau>0, \\\\ &  G_0-\\tau G_1 \\succeq 0 \\\\\\end{array} \\right.$$ "
+    "$$\\left\\{\\begin{array}{ll}\\min _{P,\\tau,\\alpha} & -\\beta \\\\ \\text { subject.: } & P \\succ 0, \\\\& \\tau>0, \\\\ &  G_0-\\tau G_1 \\succeq 0 \\\\\\end{array} \\right.$$ \n",
+    "\n",
+    "\n",
+    "\n",
+    "dd"
    ]
   },
   {
