--- a/hw6/Assignment6_12131094.ipynb
+++ b/hw6/Assignment6_12131094.ipynb
@@ -263,27 +263,19 @@
     "[Ax+u]^TPx+x^TP[Ax+u]+\\beta(x^TPx) &\\leq 0\\\\ \n",
     " x^T(a^TP+PA+\\beta P)x+x^TPu+u^TPx &\\leq 0 \n",
     "\\end{aligned}$$  \n",
-    "Change it to the matrix form, for all the $(x,u)$ such that $u = b\\phi(t,c^Tx)$\n",
+    "Change it to the matrix form, for all the $(x,\\phi(t,c^Tx))$,\n",
     "$$\n",
-    "\\left[ \\begin{matrix}x^T & u^T \\end{matrix} \\right] \\left[ \\begin{matrix}-(A^TP+PA+\\beta P) & -P\\\\ -P &  0 \\end{matrix} \\right] \\left[ \\begin{matrix}x \\\\ u \\end{matrix} \\right] \\succeq 0 \n",
+    "\\left[ \\begin{matrix}x^T & \\phi(t,c^Tx)^T \\end{matrix} \\right] \\left[ \\begin{matrix}-(A^TP+PA+\\beta P) & -Pb\\\\ -b^TP &  0 \\end{matrix} \\right] \\left[ \\begin{matrix}x \\\\ \\phi(t,c^Tx) \\end{matrix} \\right] \\succeq 0 \n",
     "$$ \n",
     "\n",
     "For the function $\\phi(t,·) : R→ R$ satisfies sector nonlinearity $|\\phi(t,y)| ≤ α|y|$, so $||\\phi(t,c^Tx)||^2 \\leq \\alpha^2 (x^Tcc^Tx)$\n",
-    "Since $||u||^2 = b^T||\\phi(t,C^Tx)||^2 b \\leq \\alpha^2 b^T (x^Tcc^Tx)b $, that is \n",
-    "$$ \\begin{aligned}  u^Tu -\\alpha^2(c^Txb)^T (c^Txb)  &\\leq 0\\\\\n",
-    "u^Tu -\\alpha^2x^Tb^Tcc^Tbx  &\\leq 0\\\\\n",
-    "\\end{aligned}$$ \n",
     "\n",
     "Change it to matrix form, we can get \n",
-    "$$ \\left[ \\begin{matrix}x^T & u^T \\end{matrix} \\right] \\left[ \\begin{matrix} \\alpha^2 cb^Tbc^T  &0\\\\ 0 & -I  \\end{matrix} \\right] \\left[ \\begin{matrix}x \\\\ u \\end{matrix} \\right] \\succeq 0 \n",
+    "$$ \\left[ \\begin{matrix}x^T & \\phi(t,c^Tx)^T \\end{matrix} \\right] \\left[ \\begin{matrix} \\alpha^2 cc^T  &0\\\\ 0 & -I  \\end{matrix} \\right] \\left[ \\begin{matrix}x \\\\ \\phi(t,c^Tx) \\end{matrix} \\right] \\succeq 0 \n",
     "$$ \n",
-    "Assume $G_0 = \\left[ \\begin{matrix}-(A^TP+PA+\\beta P) & -P\\\\ -P &  0 \\end{matrix} \\right]$,$G_1 = \\left[ \\begin{matrix} \\alpha^2 cb^Tbc^T  &0\\\\ 0 & -I  \\end{matrix} \\right]$, by s-procedure, we have $\\exist \\tau>0$, s.t. $G_0>\\tau G_1$, then the problem can be formulated by \n",
+    "Assume $G_0 = \\left[ \\begin{matrix}-(A^TP+PA+\\beta P) & -Pb\\\\ -b^TP &  0 \\end{matrix} \\right]$,$G_1 = \\left[ \\begin{matrix} \\alpha^2 cc^T  &0\\\\ 0 & -I  \\end{matrix} \\right]$, by $\\textbf{s-procedure}$, we have $\\exist \\tau>0$, s.t. $G_0>\\tau G_1$, then the problem can be formulated by \n",
     "\n",
-    "$$\\left\\{\\begin{array}{ll}\\min _{P,\\tau,\\alpha} & -\\beta \\\\ \\text { subject.: } & P \\succ 0, \\\\& \\tau>0, \\\\ &  G_0-\\tau G_1 \\succeq 0 \\\\\\end{array} \\right.$$ \n",
-    "\n",
-    "\n",
-    "\n",
-    "dd"
+    "$$\\left\\{\\begin{array}{ll}\\min _{P,\\tau,\\alpha} & -\\beta \\\\ \\text { subject.: } & P \\succ 0, \\\\& \\tau>0, \\\\ &  G_0-\\tau G_1 \\succeq 0 \\\\\\end{array} \\right.$$ \n"
    ]
   },
   {
