--- a/hw6/Assignment6_12131094_all.ipynb
+++ b/hw6/Assignment6_12131094_all.ipynb
@@ -407,20 +407,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Succeed to find the solution! \n",
+      "Succeed to find the result! \n",
       "P = \n",
-      " [[ 0.2244294  -0.14487089 -0.19088273]\n",
-      " [-0.14487089  0.13899062  0.09789311]\n",
-      " [-0.19088273  0.09789311  0.19386985]]\n",
+      " [[ 0.22333181 -0.14411104 -0.1899522 ]\n",
+      " [-0.14411104  0.13834869  0.09730774]\n",
+      " [-0.1899522   0.09730774  0.19301234]]\n",
       "K = \n",
-      "  [-21.97083237  14.18233962  18.68673382]\n"
+      "  [-21.91386075  14.14052611  18.63857253]\n"
      ]
     }
    ],
@@ -428,7 +428,10 @@
     "# pro4-2\n",
     "import numpy as np\n",
     "from pydrake.all import (MathematicalProgram, Solve)\n",
+    "# This code is mainly adapted from Russ Tedrake. Underactuated Robotics: Algorithms for Walking,\n",
+    "#  Running, Swimming, Flying, and Manipulation (Course Notes for MIT 6.832). Downloaded from http://underactuated.mit.edu/\n",
     "\n",
+    "# Problem 4(b)\n",
     "# Step 1: define dynamics matrices A_i(t) and corresponding parameters\n",
     "A = []\n",
     "A.append(np.mat([[-0.5, 0.3, 0.4], [1, 0, 0], [0, 1, 0]]))\n",
@@ -446,16 +449,18 @@
     "Y = prog.NewContinuousVariables(num_states, \"Y\")\n",
     "\n",
     "# find X,Y\n",
+    "\n",
     "#prog.AddLinearCost(np.trace(X))\n",
     "\n",
     "# s.t.\n",
-    "prog.AddPositiveSemidefiniteConstraint(X - .001 * np.identity(num_states))\n",
+    "prog.AddPositiveSemidefiniteConstraint(X - .01 * np.identity(num_states))\n",
     "for i in range(len(A)):\n",
     "    prog.AddPositiveSemidefiniteConstraint(\n",
     "        -(X.dot(A[i].transpose()) + Y.transpose().dot(B.transpose()) + A[i].dot(X) + B.dot(Y) + beta * X - .1 * np.identity(num_states))\n",
     "    )\n",
     "\n",
     "result = Solve(prog)\n",
+    "\n",
     "if result.is_success():\n",
     "    X = result.GetSolution(X)\n",
     "    Y = result.GetSolution(Y)\n",
@@ -466,6 +471,35 @@
     "    print(\"K = \\n \", K)\n",
     "else:\n",
     "    print(\"no result\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Problem 5\n",
+    "$\\textbf{Derivation of Dual SDP}$ (Optional; will not be graded): Consider the prime and dual SDP problems discussed in class. \n",
+    "\n",
+    "$(\\mathbf{P S D P}):\\left\\{\\begin{array}{ll}\\min _{X} & C \\bullet X \\\\ \\text { subj.: } & A_{i} \\bullet X=b_{i}, \\\\ & i=1, \\ldots, m \\\\ & X \\succeq 0\\end{array} \\quad(\\mathbf{D S D P}): \\begin{cases}\\max _{y \\in \\mathbb{R}^{m}} & b^{T} y \\\\ \\operatorname{subj} .: & \\sum_{i=1}^{m} y_{i} A_{i} \\preceq C\\end{cases}\\right.$\n",
+    "\n",
+    "This homework problem intends to guide you through the derivation of the dual SDP problem. We need to introduce a few definitions. In general, the Lagrangian dual of a constrained optimization problem $\\min _{x \\in \\mathcal{X}}\\{f(x): h(x)=0\\}$ is defined as\n",
+    "$$\n",
+    "\\max _{y \\in \\mathbb{R}^{m}}\\left(\\min _{x \\in \\mathcal{X}}\\left\\{f(x)+y^{T} h(x)\\right\\}\\right)\n",
+    "$$\n",
+    "To derive the desired dual form, we also need a concept: dual cone. Let $\\mathcal{V}$ be an inner product space. Suppose $K \\subseteq \\mathcal{V}$ is a cone, i.e., $\\lambda x \\in \\mathcal{K}$ for all $x \\in \\mathcal{K}$. The dual cone of $K$ is defined as\n",
+    "$$\n",
+    "\\operatorname{Dual}(K)=\\{z \\in \\mathcal{V}:\\langle z, x\\rangle \\geq 0, \\forall x \\in \\mathcal{K}\\}\n",
+    "$$\n",
+    "The dual of the PSD cone is thus dual $\\left(\\mathcal{S}_{+}^{n}\\right)=\\left\\{Y \\in \\mathcal{S}^{n}: Y \\bullet X \\geq 0, \\forall X \\in \\mathcal{S}_{+}^{n}\\right\\}$. A well-known fact about PSD cone is that it is self-dual, i.e. $\\mathcal{S}_{+}^{n}=\\operatorname{dual}\\left(\\mathcal{S}_{+}^{n}\\right)$.\n",
+    "\n",
+    "(a) Write down the Lagrangian dual problem for (PSDP).\n",
+    "\n",
+    "(b) Show that $\\min _{X \\succeq 0}\\langle Y, X\\rangle=\\left\\{\\begin{array}{ll}0 & \\text { if } Y \\succeq 0 \\\\ -\\infty & \\text { otherwise }\\end{array}\\right.$ (Hint: use the fact that $\\mathcal{S}_{+}^{n}$ is acute and self-dual.\n",
+    "\n",
+    "(c) Show that the Lagrangian dual problem of (PSDP) can be reduced to the form (DSDP) given above. \n",
+    "\n",
+    "#### Solution\n",
+    "(a)"
    ]
   }
  ],
