--- a/hw6/Assignment6_12131094_all.ipynb
+++ b/hw6/Assignment6_12131094_all.ipynb
@@ -407,20 +407,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Succeed to find the result! \n",
+      "Succeed to find the solution! \n",
       "P = \n",
-      " [[ 0.22333181 -0.14411104 -0.1899522 ]\n",
-      " [-0.14411104  0.13834869  0.09730774]\n",
-      " [-0.1899522   0.09730774  0.19301234]]\n",
+      " [[ 0.2244294  -0.14487089 -0.19088273]\n",
+      " [-0.14487089  0.13899062  0.09789311]\n",
+      " [-0.19088273  0.09789311  0.19386985]]\n",
       "K = \n",
-      "  [-21.91386075  14.14052611  18.63857253]\n"
+      "  [-21.97083237  14.18233962  18.68673382]\n"
      ]
     }
    ],
@@ -428,10 +428,7 @@
     "# pro4-2\n",
     "import numpy as np\n",
     "from pydrake.all import (MathematicalProgram, Solve)\n",
-    "# This code is mainly adapted from Russ Tedrake. Underactuated Robotics: Algorithms for Walking,\n",
-    "#  Running, Swimming, Flying, and Manipulation (Course Notes for MIT 6.832). Downloaded from http://underactuated.mit.edu/\n",
     "\n",
-    "# Problem 4(b)\n",
     "# Step 1: define dynamics matrices A_i(t) and corresponding parameters\n",
     "A = []\n",
     "A.append(np.mat([[-0.5, 0.3, 0.4], [1, 0, 0], [0, 1, 0]]))\n",
@@ -449,18 +446,16 @@
     "Y = prog.NewContinuousVariables(num_states, \"Y\")\n",
     "\n",
     "# find X,Y\n",
-    "\n",
     "#prog.AddLinearCost(np.trace(X))\n",
     "\n",
     "# s.t.\n",
-    "prog.AddPositiveSemidefiniteConstraint(X - .01 * np.identity(num_states))\n",
+    "prog.AddPositiveSemidefiniteConstraint(X - .001 * np.identity(num_states))\n",
     "for i in range(len(A)):\n",
     "    prog.AddPositiveSemidefiniteConstraint(\n",
     "        -(X.dot(A[i].transpose()) + Y.transpose().dot(B.transpose()) + A[i].dot(X) + B.dot(Y) + beta * X - .1 * np.identity(num_states))\n",
     "    )\n",
     "\n",
     "result = Solve(prog)\n",
-    "\n",
     "if result.is_success():\n",
     "    X = result.GetSolution(X)\n",
     "    Y = result.GetSolution(Y)\n",
