--- a/hw6/Assignment6_12131094.ipynb
+++ b/hw6/Assignment6_12131094.ipynb
@@ -316,7 +316,8 @@
     "tau = prog.NewContinuousVariables(1, \"tau\")\n",
     "\n",
     "I = np.identity(3)\n",
-    "G_1row =np.hstack((np.array(-(A.T@P+P@A+beta*P)+tau*alpha**2*c@c.T),np.array(-P@b)))\n",
+    "G_1row =np.hstack((np.array(-(A.T@P+P@A+beta*P)+tau*alpha**2*c@c.T)\n",
+    "                   ,np.array(-P@b)))\n",
     "G_2row = np.hstack((np.array(-b.T@P),np.array([-tau])))\n",
     "G = np.vstack((G_1row,G_2row))\n",
     "# print(G.shape)\n",
@@ -452,7 +453,8 @@
     "prog.AddPositiveSemidefiniteConstraint(X - .001 * np.identity(num_states))\n",
     "for i in range(len(A)):\n",
     "    prog.AddPositiveSemidefiniteConstraint(\n",
-    "        -(X.dot(A[i].transpose()) + Y.transpose().dot(B.transpose()) + A[i].dot(X) + B.dot(Y) + beta * X - .1 * np.identity(num_states))\n",
+    "        -(X.dot(A[i].transpose()) + Y.transpose().dot(B.transpose()) + \n",
+    "          A[i].dot(X) + B.dot(Y) + beta * X - .1 * np.identity(num_states))\n",
     "    )\n",
     "\n",
     "result = Solve(prog)\n",
@@ -471,10 +473,10 @@
  ],
  "metadata": {
   "interpreter": {
-   "hash": "51109f29b74c83a02380174f2a388167f95e9702dac943105d59ff44b41a3852"
+   "hash": "16f387c6babd236717f0608cc6650d0b9e8370489872ad1ae749126a0292d9be"
   },
   "kernelspec": {
-   "display_name": "Python 3.8.10 ('env')",
+   "display_name": "Python 3.9.11 ('drake')",
    "language": "python",
    "name": "python3"
   },
@@ -488,7 +490,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.9.11"
   },
   "orig_nbformat": 4
  },
