--- a/hw6/Assignment6_12131094.ipynb
+++ b/hw6/Assignment6_12131094.ipynb
@@ -327,7 +327,7 @@
     "\n",
     "# s.t.\n",
     "prog.AddPositiveSemidefiniteConstraint(P - .01 *np.identity(num_states))\n",
-    "\n",
+    "prog.AddPositiveSemidefiniteConstraint(tau)\n",
     "prog.AddPositiveSemidefiniteConstraint(G)\n",
     "    \n",
     "result = Solve(prog)\n",
