--- a/hw6/Assignment6_12131094.ipynb
+++ b/hw6/Assignment6_12131094.ipynb
@@ -109,7 +109,7 @@
     " a^TAuu^TAa &\\leq 1\n",
     "\\end{aligned}$$\n",
     "Since we know the $||u||^2 \\leq 1 $, $uu^T-I\\leq0$, so \n",
-    "$$ a^TAAa \\leq 1 $$\n",
+    "$$ a^TAA^Ta \\leq 1 $$\n",
     "\n",
     "(b) The volume of a ellipsoid $E_1(P,x_c) = {x ∈ R^n : (x−x_c)P^{−1}(x−x_c) ≤ 1}$ is $V = \\nu_n(\\sqrt{det(P)})$.\n",
     "To find the largest epllipsoid, that is to find a $P$ which maximize $log(\\sqrt{det(P)})$.\n",
