--- a/hw6/Assignment6_12131094.ipynb
+++ b/hw6/Assignment6_12131094.ipynb
@@ -106,7 +106,7 @@
     "$$ \\begin{aligned}  a^TAu & \\leq 1 \\\\\n",
     " ||a^T Au||^2 &\\leq 1 \\\\\n",
     " (a^TAu)(a^TAu)^T &\\leq 1\\\\\n",
-    " a^TAuu^TAa &\\leq 1\n",
+    " a^TAuu^TA^Ta &\\leq 1\n",
     "\\end{aligned}$$\n",
     "Since we know the $||u||^2 \\leq 1 $, $uu^T-I\\leq0$, so \n",
     "$$ a^TAA^Ta \\leq 1 $$\n",
